--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,11 @@
 
                                         <p class="text-muted">
                                             GitHub Stats</p>
-                                    </a><a href="#" class="btn-box big span4"><i class="icon-money"></i><b>Awesome!</b>
+                                    </a><a href="#" class="btn-box big span4"><i class="icon-money"></i><b>
+                                    {% for items in linked_res %}
+                                                <p class="text-muted">{{ linked_res[items] }}</p>
+                                            {% endfor %}
+                                    </b>
                                         <p class="text-muted">
                                             Linkedin stats</p>
                                     </a>
