--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
         <link type="text/css" href="/static/images/icons/css/font-awesome.css" rel="stylesheet">
         <link type="text/css" href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600'
             rel='stylesheet'>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="navbar navbar-fixed-top">
@@ -26,8 +27,17 @@
                         </form>
                         <ul class="nav pull-right">
                             <li><a href="#">Support </a></li>
-                            <li ><a href="#" >
-                                <img src="/static/images/user.png" class="nav-avatar" />
+                            <li ><a href="#"><b>
+                                                                        {% for items in linked_res %}
+
+                                                                        {% if items == 'pictureUrl' %}
+
+                                                <p class="text-muted"><img src={{ linked_res[items] }} class="nav-avtar"/></p>
+                                            {% endif %}
+                                            {% endfor %}
+
+                                </b>
+                                    </a>
                                 </ul>
                             </li>
                         </ul>
@@ -65,39 +75,38 @@
                         <div class="content">
                             <div class="btn-controls">
                                 <div class="btn-box-row row-fluid">
-                                    <a href="#" class="btn-box big span4"><i class=" icon-random"></i>
+                                    <a href="#" class="btn-box big span4"><i class="fa fa-stack-overflow"></i>
                                         <b>
-                                            <b> {% for items in sof_res %}
-                                                   <p class="text-muted"> {{ items }} - {{ sof_res[items] }} </p>
-                                            {% endfor %}
-                                        </b>
+                                                   <p class="text-muted"> {{ sof_res["experienced"] }}  </p>
+
                                         </b>
                                         <p class="text-muted">
-                                            Stackoverflow stats</p>
-                                    </a><a href="#" class="btn-box big span4"><i class="icon-user"></i>
-                                        <b> {% for items in git_res %}
-                                                <p class="text-muted">{{ git_res[items] }}</p>
-                                            {% endfor %}
+                                            Stack<em>overflow</em></p>
+                                    </a><a href="#" class="btn-box big span4"><i class="icon-github-alt"></i>
+                                        <b>
+                                                <p class="text-muted">{{ git_res["languages_used"] }}</p>
+
                                         </b>
 
                                         <p class="text-muted">
                                             GitHub Stats</p>
-                                    </a><a href="#" class="btn-box big span4"><i class="icon-money"></i><b>
-                                    {% for items in linked_res %}
-                                                <p class="text-muted">{{ linked_res[items] }}</p>
-                                            {% endfor %}
-                                    </b>
-                                        <p class="text-muted">
-                                            Linkedin stats</p>
                                     </a>
                                 </div>
                                 <div class="btn-box-row row-fluid">
                                     <div class="span8">
                                         <div class="row-fluid">
                                             <div class="span12">
-                                                <a href="#" class="btn-box small span4"><i class="icon-envelope"></i><b>Messages</b>
-                                                </a><a href="#" class="btn-box small span4"><i class="icon-group"></i><b>Clients</b>
-                                                </a><a href="#" class="btn-box small span4"><i class="icon-exchange"></i><b>Expenses</b>
+                                                <a href="#" class="btn-box small span4"><i class="icon-certificate"></i><b>
+
+                                                   Badges: {{sof_res["badges"]}}
+
+                                             </b>
+                                                </a><a href="#" class="btn-box small span4"><i class="icon-fa fa-trophy"></i><b>
+                                                Reputation Percentage: {{sof_res["reputation"]}}%
+                                            </b>
+                                                </a><a href="#" class="btn-box small span4"><i class="icon-fa fa-thumbs-up"></i><b>
+                                                Acceptance rate: {{sof_res["accept_rate"]}}%
+                                            </b>
                                                 </a>
                                             </div>
                                         </div>
