--- a/templates/index.html
+++ b/templates/index.html
@@ -76,17 +76,15 @@
                             <div class="btn-controls">
                                 <div class="btn-box-row row-fluid">
                                     <a href="#" class="btn-box big span4"><i class="fa fa-stack-overflow"></i>
-                                        <b>
-                                                   <p class="text-muted"> {{ sof_res["experienced"] }}  </p>
-
-                                        </b>
-                                        <p class="text-muted">
-                                            Stack<em>overflow</em></p>
+                                       <p class="text-muted">Badges: {{sof_res["badges"]}}</p>
+                                        <p class="text-muted">Reputation Percentage: {{sof_res["reputation"]}}%</p>
+                                        <p class="text-muted">Acceptance rate: {{sof_res["accept_rate"]}}%</p>
+                                            <p>Stack<em>overflow</em></p>
                                     </a><a href="#" class="btn-box big span4"><i class="icon-github-alt"></i>
-                                        <b>
-                                                <p class="text-muted">{{ git_res["languages_used"] }}</p>
-
-                                        </b>
+                                                <p class="text-muted">Followers: {{ git_res["followers"] }}</p>
+                                                <p class="text-muted">Repositories: {{ git_res["repos_count"] }}</p>
+                                                <p class="text-muted">Number of likes: {{ git_res["stargazers_total_count"] }}</p>
+                                                <p class="text-muted">Observers: {{ git_res["watchers_total_count"] }}</p>
 
                                         <p class="text-muted">
                                             GitHub Stats</p>
