--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             <div class="navbar-inner">
                 <div class="container">
                     <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-inverse-collapse">
-                        <i class="icon-reorder shaded"></i></a><a class="brand" href="index.html">Skill Advisor </a>
+                        <i class="icon-reorder shaded"></i></a><a class="brand" href="{{ url_for('main') }}">Skill Advisor </a>
                         <form class="navbar-search pull-left input-append" action="#">
                         <input type="text" class="span3">
                         <button class="btn" type="button">
@@ -54,7 +54,7 @@
                     <div class="span3">
                         <div class="sidebar">
                             <ul class="widget widget-menu unstyled">
-                                <li class="active"><a href="index.html"><i class="menu-icon icon-dashboard"></i>Dashboard
+                                <li class="active"><a href="{{ url_for('main') }}"><i class="menu-icon icon-dashboard"></i>Dashboard
                                 </a></li>
                                 <li><a class="collapsed" data-toggle="collapse" href="#togglePages"><i class="menu-icon icon-user">
                                 </i><i class="icon-chevron-down pull-right"></i><i class="icon-chevron-up pull-right">
