--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Login/Sign-In</title>
+    <title>Get Stats</title>
     
     
     <link rel="stylesheet" href="/static/css/normalize.css">
@@ -22,25 +22,21 @@
     <span class="logmod__close">Close</span>
     <div class="logmod__container">
       <ul class="logmod__tabs">
-        <li data-tabtar="lgm-2"><a href="#">Login</a></li>
-        <li data-tabtar="lgm-1"><a href="#">Sign Up</a></li>
+        <li data-tabtar="lgm-2"><a href="#">Get Stats</a></li>
+        <!--li data-tabtar="lgm-1"><a href="#">Sign Up</a></li>-->
       </ul>
       <div class="logmod__tab-wrapper">
+        <!--
       <div class="logmod__tab lgm-1">
         <div class="logmod__heading">
           <span class="logmod__heading-subtitle">Enter your personal details <strong>to create an acount</strong></span>
         </div>
         <div class="logmod__form">
           <form method="post" action="{{ url_for('dashboard') }}">
-            <div class="sminputs">
-              <div class="input full">
-                <label class="string optional" for="user-name">Github username</label>
-                <input class="string optional" name="git_uname" maxlength="255" placeholder="Email" type="text" size="50" />
-              </div>
-            </div>
+
             <div class="sminputs">
               <div class="input string optional">
-                <label class="string optional" for="user-pw">Stackoverflow id</label>
+                <label class="string optional" for="user-pw">Stackoverflow ID</label>
                 <input class="string optional" maxlength="255" type="text" name="soa_id"  size="50" />
               </div>
               <div class="input string optional">
@@ -77,38 +73,42 @@
           </div>
         </div>
       </div>
+      -->
       <div class="logmod__tab lgm-2">
         <div class="logmod__heading">
-          <span class="logmod__heading-subtitle">Enter your email and password <strong>to sign in</strong></span>
+          <span class="logmod__heading-subtitle">Please enter your details below</span>
         </div> 
         <div class="logmod__form">
           <form method="post" action="{{ url_for('dashboard') }}">
-            <div class="sminputs">
-              <div class="input full">
-                <label class="string optional" for="user-name">Github username</label>
-                <input class="string optional" name="git_uname" maxlength="255" placeholder="Email" type="text" size="50" />
-              </div>
-            </div>
+
             <div class="sminputs">
               <div class="input string optional">
-                <label class="string optional" for="user-pw">Stackoverflow id</label>
+                <label class="string optional" for="user-pw">Stackoverflow ID</label>
                 <input class="string optional" maxlength="255" type="text" name="soa_id"  size="50" />
               </div>
               </div>
             </div>
            <div class="sminputs">
               <div class="input string optional">
-                <label class="string optional" for="user-pw">LinkedIN Connect ?</label>
+                <label class="string optional" for="user-pw">Connect to Linkedin account?</label>
                 <input class="string optional" type="checkbox" name="linkedin_flag" value="True" />
               </div>
               </div>
             </div>
+            <div class="sminputs">
+              <div class="input string optional">
+                <label class="string optional" for="user-pw">Connect to Github account?</label>
+                <input class="string optional" type="checkbox" name="github_flag" value="True" />
+              </div>
+              </div>
+            </div>
             <div class="simform__actions">
-              <input class="sumbit" name="commit" type="submit" value="Log In" />
-              <span class="simform__actions-sidetext"><a class="special" role="link" href="#">Forgot your password?<br>Click here</a></span>
+              <input class="sumbit" name="commit" type="submit" value="Get Statistics" />
+              <!-- <span class="simform__actions-sidetext"><a class="special" role="link" href="#">Forgot your password?<br>Click here</a></span> -->
             </div> 
           </form>
-        </div> 
+        </div>
+    <!--
         <div class="logmod__alter">
           <div class="logmod__alter-container">
             <a href="#" class="connect facebook">
@@ -129,6 +129,7 @@
             </a>
           </div>
         </div>
+    -->
           </div>
       </div>
     </div>
