--- a/templates/home.html
+++ b/templates/home.html
@@ -190,7 +190,7 @@ If you do not have a lot of skills to show your swag Don't despair!!! Help is he
                 </div>
                 <img src="/static/img/profile/profile-02.jpg" alt="Jane Helf">
             </div>
-            <h3 class="profile-name">Shafi Ullah</h3>
+            <h3 class="profile-name">Shafi Ulla</h3>
             <p class="profile-description"></p>
             	
             <div class="social">
