--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <head>
@@ -60,7 +60,7 @@
                                 </i><i class="icon-chevron-down pull-right"></i><i class="icon-chevron-up pull-right">
                                 </i>All Users </a>
                                     <ul id="togglePages" class="collapse unstyled">
-                                        <li><a href="other-login.html"><i class="icon-user"></i>Shafi Ullah </a></li>
+                                        <li><a href="other-login.html"><i class="icon-user"></i>Shafi Ulla </a></li>
                                         <li><a href="other-user-profile.html"><i class="icon-user"></i>Srujana Bobba </a></li>
                                         <li><a href="other-user-listing.html"><i class="icon-user"></i>Shaista Ansari </a></li>
                                         <li><a href="other-user-listing.html"><i class="icon-user"></i>Mohammed Sadath Shaik</a></li>
