Stack overflow oath and intergrated

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,9 +77,9 @@
                             <div class="btn-controls">
                                 <div class="btn-box-row row-fluid">
                                     <a href="#" class="btn-box big span4"><i class="fa fa-stack-overflow"></i>
-                                       <p class="text-muted">Badges: {{sof_res["badges"]}}</p>
-                                        <p class="text-muted">Reputation Percentage: {{sof_res["reputation"]}}%</p>
-                                        <p class="text-muted">Acceptance rate: {{sof_res["accept_rate"]}}%</p>
+                                       <p class="text-muted">Badges: {{sof_res['items'][0]['badge_counts']['bronze']}}</p>
+                                        <p class="text-muted">Reputation Percentage: {{sof_res["items"][0]["reputation"]}}%</p>
+                                        <p class="text-muted">Acceptance rate: 22%</p>
 
                                                 Stack<em>overflow</em> Inc.
                                     </a><a href="#" class="btn-box big span4"><i class="icon-github-alt"></i>
