--- a/templates/register.html
+++ b/templates/register.html
@@ -83,8 +83,8 @@
 
             <div class="sminputs">
               <div class="input string optional">
-                <label class="string optional" for="user-pw">Stackoverflow ID</label>
-                <input class="string optional" maxlength="255" type="text" name="soa_id"  size="50" />
+                <label class="string optional" for="user-pw">Connect to Stackoverflow account?</label>
+                <input class="string optional" type="checkbox" name="stackoverflow_flag" value="True" />
               </div>
               </div>
             </div>
