Changed index.html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
         <link type="text/css" href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600'
             rel='stylesheet'>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/89f2f44ba07ea3fff7e561c2142813b278c2d6c6/devicon.min.css">
     </head>
     <body>
         <div class="navbar navbar-fixed-top">
@@ -105,25 +106,25 @@
                                     <div class="span8">
                                         <div class="row-fluid">
                                             <div class="span12">
-                                                <a href="#" class="btn-box small span4"><i class="icon-certificate"></i><b>
+                                                <a href="#" class="btn-box small span4"><i class="devicon-angularjs-plain"></i><b>
 
-                                                   Badges: {{sof_res["badges"]}}
+                                                   Angular.js
 
                                              </b>
-                                                </a><a href="#" class="btn-box small span4"><i class="icon-fa fa-trophy"></i><b>
-                                                Reputation Percentage: {{sof_res["reputation"]}}%
+                                                </a><a href="#" class="btn-box small span4"><i class="devicon-bootstrap-plain"></i><b>
+                                                Bootstrap
                                             </b>
-                                                </a><a href="#" class="btn-box small span4"><i class="icon-fa fa-thumbs-up"></i><b>
-                                                Acceptance rate: {{sof_res["accept_rate"]}}%
+                                                </a><a href="#" class="btn-box small span4"><i class="devicon-css3-plain"></i><b>
+                                                CSS3
                                             </b>
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="row-fluid">
                                             <div class="span12">
-                                                <a href="#" class="btn-box small span4"><i class="icon-save"></i><b>Total Sales</b>
-                                                </a><a href="#" class="btn-box small span4"><i class="icon-bullhorn"></i><b>Social Feed</b>
-                                                </a><a href="#" class="btn-box small span4"><i class="icon-sort-down"></i><b>Bounce
+                                                <a href="#" class="btn-box small span4"><i class="devicon-html5-plain-wordmark colored"></i><b>HTML5</b>
+                                                </a><a href="#" class="btn-box small span4"><i class="devicon-javascript-plain colored"></i><b>JavaScript</b>
+                                                </a><a href="#" class="btn-box small span4"><i class="devicon-python-plain colored"></i><b>Python
                                                     Rate</b> </a>
                                             </div>
                                         </div>
@@ -182,5 +183,5 @@
         <script src="/static/scripts/flot/jquery.flot.resize.js" type="text/javascript"></script>
         <script src="/static/scripts/datatables/jquery.dataTables.js" type="text/javascript"></script>
         <script src="/static/scripts/common.js" type="text/javascript"></script>
-      
+
     </body>
