integrated paypal button

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,12 +20,7 @@
                 <div class="container">
                     <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-inverse-collapse">
                         <i class="icon-reorder shaded"></i></a><a class="brand" href="{{ url_for('main') }}">Skill Advisor </a>
-                        <form class="navbar-search pull-left input-append" action="#">
-                        <input type="text" class="span3">
-                        <button class="btn" type="button">
-                            <i class="icon-search"></i>
-                        </button>
-                        </form>
+                           <a href="/payment"><img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/ppcredit-logo-large.png" alt="PayPal Credit" /> </a>
                         <ul class="nav pull-right">
                             <li><a href="#">Support </a></li>
                             <li ><a href="#"><b>
@@ -172,6 +167,9 @@
 
         <!--/.wrapper-->
         <div class="footer">
+            <button class="btn" type="button">
+<img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/cc-badges-ppppcmcvdam.png" alt="Pay with PayPal, PayPal Credit or any major credit card" />                        </button>
+
             <div class="container">
                Design &copy; 2015 Copyright Skill Advisor, All rights reserved.
             </div>
