--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Get Stats</title>
+    <title>Connect with your professional network and get overall statistics</title>
     
     
     <link rel="stylesheet" href="/static/css/normalize.css">
@@ -19,10 +19,10 @@
 
     <div class="logmod">
   <div class="logmod__wrapper">
-    <span class="logmod__close">Close</span>
+
     <div class="logmod__container">
       <ul class="logmod__tabs">
-        <li data-tabtar="lgm-2"><a href="#">Get Stats</a></li>
+        <li data-tabtar="lgm-2"><center><a href="#" style="text-align:center;"> &nbsp;&nbsp;Get your overall statistics</center></a></li>
         <!--li data-tabtar="lgm-1"><a href="#">Sign Up</a></li>-->
       </ul>
       <div class="logmod__tab-wrapper">
@@ -76,7 +76,7 @@
       -->
       <div class="logmod__tab lgm-2">
         <div class="logmod__heading">
-          <span class="logmod__heading-subtitle">Please enter your details below</span>
+          <span class="logmod__heading-subtitle">Connect to your existing professional networks and get your overall statistics. </span>
         </div> 
         <div class="logmod__form">
           <form method="post" action="{{ url_for('dashboard') }}">
