--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
 
                                             GitHub Inc.
                                     </a>
-                                    <a href="#" class="btn-box big span4"><i class="icon-linkedin"></i>
+                                    <a href="/login" class="btn-box big span4"><i class="icon-linkedin"></i>
                                         <p class="text-muted"> <em>{{ linked_res['headline'] }}</em></p>
 
                                         <p class="text-muted"> Major: {{ linked_res['industry'] }}</p>
