--- a/templates/home.html
+++ b/templates/home.html
@@ -106,6 +106,7 @@
             	<li class="current"><a href="#home-slider">Home</a></li>
                 <li><a href="#work">Our Work</a></li>
                 <li><a href="#about">About Us</a></li>
+                <li><a href="/getstats">Dashboard</a></li>
             </ul>
         </nav>
         
