stackoverflow url doesnt work

--- a/templates/home.html
+++ b/templates/home.html
@@ -106,7 +106,7 @@
             	<li class="current"><a href="#home-slider">Home</a></li>
                 <li><a href="#work">Our Work</a></li>
                 <li><a href="#about">About Us</a></li>
-                <li><a href="/getstats">Dashboard</a></li>
+                <li><a href="/main">Dashboard</a></li>
             </ul>
         </nav>
         
@@ -127,7 +127,9 @@
                     </h3>
                     </B>
                     <h3 class="title-description">One place for all these tools, you don't have to scramble to get the data together. We have done the hard work for you. All you have to do is provide us with your usernames and we will do the rest.
-We will take the work that you have done on Github and Stack Overflow to post the stats on Linkedin and Glassdoor so that the employers can get to see what you have accomplished on these platforms. Try our project by clicking <a href="/getstats">here</a></h3>
+We will take the work that you have done on Github and Stack Overflow to post the stats on Linkedin and Glassdoor so that the employers can get to see what you have accomplished on these platforms.
+                        Try our project by clicking</h3>
+                    <h1><a href="/main">here</a></h1>
                 </div>
             </div>
         </div>
