--- a/templates/stackoverflow.html
+++ b/templates/stackoverflow.html
@@ -15,7 +15,7 @@ SE.init({
     clientId: 5094,
     key: 'j8U2Oyj*kjXt)hyccwyhTA((',
     // Used for cross domain communication, it will be validated
-    channelUrl: 'http://localhost:80/dashboard',
+    channelUrl: 'http://localhost:5000/stackoverflow',
     // Called when all initialization is finished
     complete: function(data) {
         $('#login-button')
