--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
                         <div class="content">
                             <div class="btn-controls">
                                 <div class="btn-box-row row-fluid">
-                                    <a href="/stackoverflow" class="btn-box big span4"><i class="fa fa-stack-overflow"></i>
+                                    <a href="https://stackexchange.com/oauth?scope=read_inbox&redirect_uri=http%3A%2F%2Flocalhost%3A80%2Fstack_callback&response_type=code&client_id=5094" class="btn-box big span4"><i class="fa fa-stack-overflow"></i>
                                        <p class="text-muted">Badges: {% if sof_res != '' %} {{sof_res['items'][0]['badge_counts']['bronze']}} {% endif %}</p>
                                         <p class="text-muted">Reputation Percentage:{% if sof_res != '' %} {{sof_res["items"][0]["reputation"]}}% {% endif %}</p>
                                         <p class="text-muted">Acceptance rate: 22%</p>
