Adding analytic code

--- a/templates/home.html
+++ b/templates/home.html
@@ -66,7 +66,7 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'Insert Your Code']);
+  _gaq.push(['_setAccount', 'UA-47526915-2']);
   _gaq.push(['_trackPageview']);
 
   (function() {
